--- a/SellerScreen/SellerScreen.csproj
+++ b/SellerScreen/SellerScreen.csproj
@@ -57,7 +57,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>SellerScreen.App</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Resources\sellerscreen.ico</ApplicationIcon>
