--- a/SellerScreen/SellerScreen.csproj
+++ b/SellerScreen/SellerScreen.csproj
@@ -204,6 +204,9 @@
     <Content Include="Resources\Envelope-icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\github_PNG40.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Networking-icon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
